# jpy

./: .gitignore  .json  LICENSE  README.md  base.json  baser.json  example.json  example.py  example_create.json  example_file.py  main.py  other.json  pyproject.toml  setup.py  test.py
examples/: create.md  delete.md  insert.md  other.md  select.md  update.md
jpy/: .gitignore  __init__.py  _jpy.py
jpy/methods/: __init__.py  delete.py  insert.py  select.py  update.py  where_value.py
jpy/src/methods/: __init__.py  update.py
jpy/utils/: __init__.py  abstract.py  binary.py  checking.py  enums.py
json_orm/: __init__.py  _jpy.py
json_orm/async/: _jpy.py
json_orm/async/methods/: custom.py  select.py  update.py
json_orm/async/utils/: abstract.py  checking.py  enums.py  output.py
json_orm/methods/: __init__.py  custom.py  delete.py  insert.py  select.py  update.py
json_orm/utils/: __init__.py  abstract.py  checking.py  enums.py  exception.py  models.py  result_class.py
orm_json/: __init__.py  _jpy.py
orm_json/methods/: custom.py  delete.py  insert.py  select.py  update.py
orm_json/utils/: abstract.py  checking.py  models.py
utils/: __init__.py  checking.py
